--- a/httpdocs/assets/themes/skeletal/css/app/neto/neto.less
+++ b/httpdocs/assets/themes/skeletal/css/app/neto/neto.less
@@ -1,5 +1,3 @@
-// Skeletal by Cart Brewery for Neto Ecommerce.
-
 // Boxes and Wells
 .well {
 	margin-bottom:10px;
@@ -1359,6 +1357,8 @@ blockquote h1,h2,h3,h4 {
 		}
 	}
 }
-.dropdown-hover:hover>.dropdown-menu {
-	display: block
+@media (min-width: @screen-sm-min) {
+	.dropdown-hover:hover>.dropdown-menu {
+		display: block
+	}
 }
